# smart-pharmacy-backend

./: .gitignore  crawling.py  crawling_bot.py  e약은요정보검색.xlsx  img_url_add.txt  medicine_quantity_random.txt  pyproject.toml  readme.md  start.txt  traingpt.ipynb
carts/: models.py
carts/migrations/: 0001_initial.py
config/: settings.py  urls.py
crawling_imgs/: image_sources_bot.csv
diagnosis/: admin.py  api.py  apps.py  gpt_api.py  models.py  serializers.py  urls.py  views.py
diagnosis/migrations/: 0001_initial.py  0002_initial.py  0002_rename_diagnose_diagnosis.py  0003_alter_diagnose_options_alter_query_options_and_more.py  0004_alter_diagnose_title.py  0005_alter_diagnose_user.py
favorites/: models.py  serializers.py  urls.py  views.py
favorites/migrations/: 0001_initial.py
inventories/: admin.py  models.py  serializers.py  urls.py  views.py
inventories/migrations/: 0001_initial.py  0002_alter_inventory_medicine_alter_inventory_owner.py  0002_alter_inventory_options.py  0002_initial.py
medical_records/: admin.py  models.py
medical_records/migrations/: 0001_initial.py  0002_initial.py
medicines/: admin.py  models.py  serializers.py  urls.py  views.py
medicines/migrations/: 0001_initial.py  0002_alter_medicine_beware_food_alter_medicine_cautions_and_more.py  0002_alter_medicine_price_alter_medicine_remaining.py  0002_medicine_remaining.py  (+4 more)
receipts/: admin.py  models.py  serializers.py  urls.py  views.py
reviews/: admin.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
(+16 files in other folders)
